--- a/app/src/main/res/layout/book_row.xml
+++ b/app/src/main/res/layout/book_row.xml
@@ -5,11 +5,12 @@
     android:layout_height="wrap_content"
     android:background="?android:attr/selectableItemBackground">
 
-    <TextView android:id="@+id/title"
+    <TextView
+        android:id="@+id/title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="25sp"
-        android:textStyle="bold"/>
+        android:textStyle="bold" />
 
     <TextView android:id="@+id/author"
         android:layout_width="wrap_content"
